Link job applications to user ID